Fix alignment on lab landing.

--- a/assets/styles/_lab.scss
+++ b/assets/styles/_lab.scss
@@ -3,9 +3,13 @@
 
 
 	// Headers on the landing/list.
-	.half h2.no_toc {
-		padding-bottom: var(--margin--vertical);
+	.landing .half {
+		align-self: start;
 
-		&:after { display: none }
+		h2.no_toc {
+			padding-bottom: var(--margin--vertical);
+
+			&:after { display: none }
+		}
 	}
 }
